@@ -261,7 +261,4 @@ class Sys::IO::Constant {
   native static method LOCK_UN : int ();
 
   native static method AT_EACCESS : int ();
-
-  native static method FD_SETSIZE : int ();
-
 }
