@@ -37,6 +37,15 @@
   [Incompativle Changes]
     * Removed the is_D_WIN32 method in the Sys class. Please use Sys->defined("_WIN32") instead.
     * The access method in the Sys::IO gets to raise an exception. Use the access_raw method instead if the original behavior is needed.
+    * Removed the following methods in the Sys::IO class.
+      
+      static method FD_ZERO : void ($set : Sys::IO::Fd_set);
+      static method FD_SET : void ($fd : int, $set : Sys::IO::Fd_set);
+      static method FD_CLR : void ($fd : int, $set : Sys::IO::Fd_set);
+      static method FD_ISSET : int ($fd : int, $set : Sys::IO::Fd_set);
+      static method select : int ($nfds : int, $readfds : Sys::IO::Fd_set, $writefds : Sys::IO::Fd_set, $exceptfds : Sys::IO::Fd_set, $timeout : Sys::Time::Timeval);
+    * Removed the Sys::IO::Fd_set class.
+    
 0.10 2022-10-14
   [New Features]
     * Added the Sys::Time::Timeval class.
